    inlined pages. Properly solving this would involve tracking every page
    that contributes to a page's content and using the youngest of them all,
    as well as special cases for things like the version plugin, and it's just
    too complex to do.
  * aggregate: Forking a child broke the one state that mattered: Forcing
    the aggregating page to be rebuilt. Fix this.

 -- Joey Hess <joeyh@debian.org>  Sat, 02 Feb 2008 23:36:31 -0500

ikiwiki (2.30) unstable; urgency=low

  [ Joey Hess ]
  * Old versions of git-init don't support --git-dir or GIT_DIR with
    --bare. Change ikiwiki-makerepo to use a method that should work with
    those older versions too.
  * aggregate: Don't let feeds set creation times for pages in the future.
  * Add full parser for git diff-tree output (Brian Downing)
  * aggregate: Fork a child process to handle the aggregation. This simplifies
    the code, since that process can change internal state as needed, and
    it will automatically be cleaned up for the parent process, which proceeds
    to render the changes.

  [ Josh Triplett ]
  * Add trailing comma to commented-out umask in sample ikiwiki.setup, so
    that uncommenting it does not break the setup file.

  [ Joey Hess ]
  * inline: The template can check for FIRST and LAST, which will be
    set for the first and last inlined page. Useful for templates that build
    tables and the like.
  * prettydate,ddate: Don't ignore time formats passed to displaytime
    function.
  * Pages with extensions starting with "_" are internal-use, and will
    not be rendered or web-edited, or matched by normal pagespecs.
  * Add "internal()" pagespec that matches internal-use pages.
  * RecentChanges is now a static html page, that's updated whenever a commit
    is made to the wiki. It's built as a blog using inline, so it can have
    an rss feed that users can subscribe to.
  * Removed support for sending commit notification mails. Along with it went