@@ -539,10 +539,6 @@ sub cgi_editpage ($$) { #{{{
 		# may have been committed while the post-commit hook was
 		# disabled.
 		require IkiWiki::Render;
-		# Reload index, since the first time it's loaded is before
-		# the wiki is locked, and things may have changed in the
-		# meantime.
-		loadindex();
 		refresh();
 		saveindex();
 
@@ -616,6 +612,7 @@ sub cgi (;$$) { #{{{
 	
 	# Need to lock the wiki before getting a session.
 	lockwiki();
+	loadindex();
 	
 	if (! $session) {
 		$session=cgi_getsession($q);
